// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state 1`] = `
.c6 {
  box-sizing: border-box;
  margin-left: 24px;
  margin-right: 24px;
}

.c8 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 40px;
  padding-right: 24px;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-bottom: 8px;
  margin-left: auto;
  margin-right: auto;
  width: 240px;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #651FFF;
}

.c12:active {
  background: #354AA4;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  box-sizing: border-box;
  max-width: 700px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 24px;
  padding-bottom: 24px;
  background-color: #222C59;
  flex: 0 0 auto;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  display: block;
  outline: none;
  width: 180px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
}

.c4 {
  box-sizing: border-box;
  max-width: 700px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 24px;
  padding-bottom: 24px;
  background-color: #222C59;
  flex: 0 0 auto;
  display: flex;
  align-items: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
      <button
        class="c3"
        kind="primary"
        title="Add an application to the root cluster"
        width="240px"
      >
        Add Application
      </button>
    </div>
    <div
      class="c4 sc-AxirZ c5"
    >
      <div
        class="c6"
      >
        <img
          class="c7"
          src="file_stub"
          width="180px"
        />
      </div>
      <div
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            class="c10"
          >
            SECURE YOUR FIRST APPLICATION
          </div>
          <div
            class="c11"
          >
            Teleport Application Access provides secure access to internal applications without the need for a VPN and with the auditability and control of Teleport.
          </div>
        </div>
        <button
          class="c12"
          kind="primary"
          title="Add an application to the root cluster"
          width="240px"
        >
          Add Application
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded state 1`] = `
.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 87px;
}

.c15:active {
  opacity: 0.56;
}

.c15:hover,
.c15:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c15:active {
  opacity: 0.24;
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c13 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
}

.c14 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-bottom: 4px;
  margin-right: 4px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  color: #FFFFFF;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
  flex: 0 0 auto;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c11 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  border-radius: 8px;
  font-size: 12px;
  width: 100%;
}

.c11 > thead > tr > th,
.c11 > tbody > tr > th,
.c11 > tfoot > tr > th,
.c11 > thead > tr > td,
.c11 > tbody > tr > td,
.c11 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c11 > thead > tr > th:first-child,
.c11 > tbody > tr > th:first-child,
.c11 > tfoot > tr > th:first-child,
.c11 > thead > tr > td:first-child,
.c11 > tbody > tr > td:first-child,
.c11 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c11 > thead > tr > th:last-child,
.c11 > tbody > tr > th:last-child,
.c11 > tfoot > tr > th:last-child,
.c11 > thead > tr > td:last-child,
.c11 > tbody > tr > td:last-child,
.c11 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c11 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c11 > thead > tr > th .c9 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c11 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c11 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c11 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c11 tbody > tr:last-child td:first-child {
  border-bottom-left-radius: 8px;
}

.c11 tbody > tr:last-child td:last-child {
  border-bottom-right-radius: 8px;
}

.c8 {
  box-sizing: border-box;
  display: flex;
}

.c8 button {
  background: none;
  border: none;
  border-radius: 200px;
  cursor: pointer;
  padding: 0;
  margin: 0 0 0 8px;
  outline: none;
  transition: all 0.3s;
  text-align: center;
}

.c8 button:hover,
.c8 button:focus {
  background: #1C254D;
}

.c8 button:hover .c9,
.c8 button:focus .c9 {
  opacity: 1;
}

.c8 button .c9 {
  opacity: 0.4;
  font-size: 20px;
  transition: all 0.3s;
}

.c6 {
  padding: 8px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c5 {
  box-sizing: border-box;
  font-size: 12px;
  min-width: 200px;
  outline: none;
  border: none;
  border-radius: 200px;
  height: 32px;
  transition: all .2s;
  background: #222C59;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  color: rgba(255,255,255,0.87);
}

.c5:hover {
  background: #2C3A73;
}

.c5:focus,
.c5:active {
  background: #2C3A73;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c5::placeholder {
  color: rgba(255,255,255,0.24);
  font-size: 12px;
}

.c12 > tbody > tr > td {
  vertical-align: baseline;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
      <button
        class="c3"
        kind="primary"
        title="Add an application to the root cluster"
        width="240px"
      >
        Add Application
      </button>
    </div>
    <div
      class="c4"
    >
      <input
        class="c5"
        color="text.primary"
        placeholder="SEARCH..."
        value=""
      />
    </div>
    <div>
      <nav
        class="c6"
      >
        <div
          class="c7"
          color="primary.contrastText"
        >
          SHOWING 
          <strong>
            1
          </strong>
           - 
          <strong>
            3
          </strong>
           
          of 
          <strong>
            3
          </strong>
        </div>
        <div
          class="c8"
        >
          <button
            disabled=""
            title="Previous Page"
          >
            <span
              class="c9 c10 icon icon-arrow-left-circle "
              color="light"
              font-size="3"
            />
          </button>
          <button
            disabled=""
            title="Next Page"
          >
            <span
              class="c9 c10 icon icon-arrow-right-circle "
              color="light"
              font-size="3"
            />
          </button>
        </div>
      </nav>
      <table
        class="c11 c12"
      >
        <thead>
          <tr>
            <th>
              <a>
                Name
                <span
                  class="c9 c13 icon icon-chevron-down "
                  color="light"
                />
              </a>
            </th>
            <th>
              <a>
                Address
                <span
                  class="c9 c13 icon icon-chevrons-expand-vertical "
                  color="light"
                />
              </a>
            </th>
            <th>
              Labels
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              jenkinsOne
            </td>
            <td>
              jenkins-address
            </td>
            <td>
              <div
                class="c14"
                kind="secondary"
              >
                kernal: 4.15.0-51-generic
              </div>
              <div
                class="c14"
                kind="secondary"
              >
                env: prod
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c15"
                href="/web/launch/jenkins.one/one/jenkins-address"
                kind="border"
                target="_blank"
                width="87px"
              >
                Open
              </a>
            </td>
          </tr>
          <tr>
            <td>
              jenkinsThree
            </td>
            <td>
              third-jenkins-address
            </td>
            <td>
              <div
                class="c14"
                kind="secondary"
              >
                env: idk
              </div>
              <div
                class="c14"
                kind="secondary"
              >
                cluster-name: cluster-three
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c15"
                href="/web/launch/jenkins.three/three/third-jenkins-address"
                kind="border"
                target="_blank"
                width="87px"
              >
                Open
              </a>
            </td>
          </tr>
          <tr>
            <td>
              jenkinsTwo
            </td>
            <td>
              second-jenkins-address
            </td>
            <td>
              <div
                class="c14"
                kind="secondary"
              >
                env: staging
              </div>
              <div
                class="c14"
                kind="secondary"
              >
                cluster-name: some-cluster-name
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c15"
                href="/web/launch/jenkins.two/two/second-jenkins-address"
                kind="border"
                target="_blank"
                width="87px"
              >
                Open
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
